changes to fix dark mode

--- a/PainterExtension/CanvasColors/custom.css
+++ b/PainterExtension/CanvasColors/custom.css
@@ -54,7 +54,7 @@ body{
 }
 
 .darkmode div {
-    background-color: green;
+    background-color: black;
 }
 
 
